force-app/main/default/objects/Lead/fields/AOI_Neuroscience_Research__c.field-meta.xml
<CustomField>
    <fullName>AOI_Neuroscience_Research__c</fullName>
    <description>Field value is true if Area Of Interest field includes Neuroscience Research</description>
    <defaultValue>false</defaultValue>
    <label>AOI Neuroscience Research</label>
    <type>Checkbox</type>
</CustomField>