force-app/main/default/objects/Lead/fields/AOI_Pharmacogenomics_PGx__c.field-meta.xml
<CustomField>
    <fullName>AOI_Pharmacogenomics_PGx__c</fullName>
    <description>Field value is true if Area Of Interest field includes Pharmacogenomics PGx</description>
    <defaultValue>false</defaultValue>
    <label>AOI Pharmacogenomics (PGx)</label>
    <type>Checkbox</type>
</CustomField>