force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Value Source : User Manually choose the Authority field value.</description>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Authority</valueSetName>
    </valueSet>
</CustomField>