force-app/main/default/objects/Lead/fields/ByPass_Lead_Rules__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Lead_Rules__c</fullName>
    <description>Bypass Lead Assignment Rules</description>
    <formula>$Permission.Lead_ByPass_Duplicate_Rule</formula>
    <label>ByPass Lead Rules</label>
    <type>Checkbox</type>
</CustomField>