force-app/main/default/objects/Lead/fields/Captello_Contact_Me_Date__c.field-meta.xml
<CustomField>
    <fullName>Captello_Contact_Me_Date__c</fullName>
    <description>Field works with Captello Contact Me field to note when contact was requested through Captello</description>
    <label>Captello Contact Me Date</label>
    <type>Date</type>
</CustomField>