force-app/main/default/objects/Lead/fields/Cardiovascular_Disease_Research__c.field-meta.xml
<CustomField>
    <fullName>Cardiovascular_Disease_Research__c</fullName>
    <description>Legacy field</description>
    <defaultValue>false</defaultValue>
    <label>Cardiovascular Disease Research</label>
    <type>Checkbox</type>
</CustomField>