force-app/main/default/objects/Lead/fields/Country_Local__c.field-meta.xml
<CustomField>
    <fullName>Country_Local__c</fullName>
    <description>Created as part of DCP-192.
Value Source : Field value entered by the user for Local Address</description>
    <inlineHelpText>Lead address country in local language</inlineHelpText>
    <label>Country (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>