force-app/main/default/objects/Lead/fields/Customer_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sub_Type__c</fullName>
    <description>Legacy field not in use</description>
    <label>Customer Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Customer_Sub_Type</valueSetName>
    </valueSet>
</CustomField>