force-app/main/default/objects/Lead/fields/Cvent_Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Contact_Me__c</fullName>
    <description>Field allows a person filling out Cvent form to select Yes/No to be contacted. MQL/Task is then generated within SFDC/Pardot</description>
    <label>Cvent Contact Me</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>