force-app/main/default/objects/Lead/fields/Date_Status_Set_As_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Set_As_Accepted__c</fullName>
    <description>Value Source : Value updated by &quot;Lead Update Date Status Set as Accepted for Accepted Status&quot; workflow rule when lead status = Accepted</description>
    <label>Date Status Set As Accepted</label>
    <type>Date</type>
</CustomField>