force-app/main/default/objects/Lead/fields/Date_Status_Set_As_Automation_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Set_As_Automation_Qualified__c</fullName>
    <description>Value Source: Value stamped by &quot;Lead Update Date Status Set as Automation Qualified for Automation Qualified Status&quot; workflow rule when lead status = Automation Qualified</description>
    <label>Date Status Set As Automation Qualified</label>
    <type>Date</type>
</CustomField>