force-app/main/default/objects/Lead/fields/Date_Status_Set_As_Data_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Set_As_Data_Check__c</fullName>
    <description>Value Source: Value stamped by &quot;Lead Update Date Status Set as Data Check for Data Check Status&quot; workflow rule when lead status = Data Check</description>
    <label>Date Status Set As Data Check</label>
    <type>Date</type>
</CustomField>