force-app/main/default/objects/Lead/fields/Days_From_Data_Check_To_Validated__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Data_Check_To_Validated__c</fullName>
    <description>formula Date Set as Data Check and Date Set as Validated</description>
    <formula>Date_Status_Set_As_Validated__c -  Date_Status_Set_As_Data_Check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Data Check To Validated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>