force-app/main/default/objects/Lead/fields/Days_from_New_to_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Days_from_New_to_Accepted__c</fullName>
    <description>Value Source : Formula field to calculate stage duration</description>
    <formula>Date_Status_Set_As_Accepted__c-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from New to Accepted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>