force-app/main/default/objects/Lead/fields/Days_From_New_to_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Days_From_New_to_Inquiry__c</fullName>
    <description>Value Source : formula field to capture stage duration</description>
    <formula>Date_Status_Set_As_Inquiry__c-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From New to Inquiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>