force-app/main/default/objects/Lead/fields/Days_from_Recycled_to_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Recycled_to_Accepted__c</fullName>
    <description>formula from Recycled Date to Date Set as Accepted</description>
    <formula>Date_Status_Set_As_Accepted__c-Date_Status_Set_As_Recycled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Recycled to Accepted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>