force-app/main/default/objects/Lead/fields/Days_from_Recycled_to_Hand_Raise__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Recycled_to_Hand_Raise__c</fullName>
    <description>Formula to calculate days from Recycled status to Hand Raise status</description>
    <formula>Date_Status_Set_As_Hand_Raise__c - Date_Status_Set_As_Recycled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Recycled to Hand Raise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>