force-app/main/default/objects/Lead/fields/Days_from_Recycled_to_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Recycled_to_Inquiry__c</fullName>
    <description>formula that looks at Recycled Date and Date Set as Inquiry</description>
    <formula>Date_Status_Set_As_Inquiry__c-Date_Status_Set_As_Recycled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Recycled to Inquiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>