force-app/main/default/objects/Lead/fields/Days_from_Validated_to_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Validated_to_Accepted__c</fullName>
    <description>Value Source : formula field to capture stage duration</description>
    <formula>Date_Status_Set_As_Accepted__c-Date_Status_Set_As_Validated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Validated to Accepted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>