force-app/main/default/objects/Lead/fields/DMP_CRM_Segment_04__c.field-meta.xml
<CustomField>
    <fullName>DMP_CRM_Segment_04__c</fullName>
    <description>Field capturing DMP segment that prospect matches for use in creating audiences</description>
    <label>DMP CRM Segment 04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>