force-app/main/default/objects/Lead/fields/Double_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In__c</fullName>
    <description>Double Opt In field will be used to determine Marketable status of the Lead.</description>
    <label>Double Opt-in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>