force-app/main/default/objects/Lead/fields/Double_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Date__c</fullName>
    <description>Doubt Opt In Date field holds the date depicting when Doubt Opt In was done.</description>
    <label>Double Opt-in Date</label>
    <type>DateTime</type>
</CustomField>