force-app/main/default/objects/Lead/fields/Double_Opt_In_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_In_Email_Sent_Date__c</fullName>
    <description>Field that notes the send date of Pardot double opt in email for double opt in consent</description>
    <label>Double Opt In Email Sent Date</label>
    <type>DateTime</type>
</CustomField>