force-app/main/default/objects/Lead/fields/Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Status__c</fullName>
    <description>Email verification status</description>
    <defaultValue>&apos;Not Verified&apos;</defaultValue>
    <label>Email Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Email_Verification</valueSetName>
    </valueSet>
</CustomField>