force-app/main/default/objects/Lead/fields/Explicit_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Opt_In_Date__c</fullName>
    <description>Explicit Opt In Date field holds the date depicting when Explicit Opt In was done.</description>
    <label>Explicit Opt-in Date</label>
    <type>DateTime</type>
</CustomField>