force-app/main/default/objects/Lead/fields/First_Responded_Campaign__c.field-meta.xml
<CustomField>
    <fullName>First_Responded_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first SFDC Campaign the person responded to</description>
    <label>First Responded Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>