force-app/main/default/objects/Lead/fields/First_Responded_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Responded_Campaign_Date__c</fullName>
    <description>The date/time the person responded to the first SFDC Campaign</description>
    <label>First Responded Campaign Date</label>
    <type>DateTime</type>
</CustomField>