force-app/main/default/objects/Lead/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Created as part of story CMCM-7969 . This picklist is to be added on contact and lead object to identify last Account Engagement form type submitted</description>
    <inlineHelpText>Last Account Engagement form type submitted by person</inlineHelpText>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Type</valueSetName>
    </valueSet>
</CustomField>