force-app/main/default/objects/Lead/fields/Illumina_Community_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Illumina_Community_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value Source : field value entered by user.
DCP-13654- Updated to Picklist</description>
    <inlineHelpText>If yes, customer would like to receive Illumina Community newsletter</inlineHelpText>
    <label>Illumina Community Opt In</label>
    <type>Checkbox</type>
</CustomField>