force-app/main/default/objects/Lead/fields/Is_AutoConversion_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_AutoConversion_In_Progress__c</fullName>
    <description>Checks if auto zcnversion is in progress</description>
    <defaultValue>false</defaultValue>
    <label>Is AutoConversion In Progress</label>
    <type>Checkbox</type>
</CustomField>