force-app/main/default/objects/Lead/fields/Is_AutoMerge_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_AutoMerge_In_Progress__c</fullName>
    <description>Checks if auto merge is in progress</description>
    <defaultValue>false</defaultValue>
    <label>Is AutoMerge In Progress</label>
    <type>Checkbox</type>
</CustomField>