force-app/main/default/objects/Lead/fields/IsVerified__c.field-meta.xml
<CustomField>
    <fullName>IsVerified__c</fullName>
    <description>Email verification formula field to denote if a lead's email is verified</description>
    <formula>AND( 
    NOT(ISBLANK(Email_Verification_Date__c)),
    Email_Verification_Date__c &gt;  TODAY() - 180
    )</formula>
    <label>IsVerified</label>
    <type>Checkbox</type>
</CustomField>