force-app/main/default/objects/Lead/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <description>Field that notes the main responsibilities of lead's job</description>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Function</valueSetName>
    </valueSet>
</CustomField>