force-app/main/default/objects/Lead/fields/Last_Form_Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Submission_URL__c</fullName>
    <description>Field that captures the website page URL a lead was last on when submitting a Pardot form</description>
    <label>Last Form Submission URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>