force-app/main/default/objects/Lead/fields/Last_Responded_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Responded_Campaign__c</fullName>
    <description>Field that captures the last campaign a lead is associated to</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Responded Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Last Responded Campaign)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>