force-app/main/default/objects/Lead/fields/Last_Responded_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Responded_Campaign_Date__c</fullName>
    <description>Field that captures the member date of the last campaign a lead is associated to</description>
    <label>Last Responded Campaign Date</label>
    <type>DateTime</type>
</CustomField>