force-app/main/default/objects/Lead/fields/Lead_18_Char_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_18_Char_Id__c</fullName>
    <description>18 character lead ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead 18 Char Id</label>
    <type>Text</type>
</CustomField>