force-app/main/default/objects/Lead/fields/Legacy_Email_Opted_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Email_Opted_In_Method__c</fullName>
    <description>Field that collects historical Marketo data</description>
    <label>Legacy Email Opted In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Opted_In_Method</valueSetName>
    </valueSet>
</CustomField>