force-app/main/default/objects/Lead/fields/Marketability_Rule__c.field-meta.xml
<CustomField>
    <fullName>Marketability_Rule__c</fullName>
    <description>This field depicts the Marketability Rule for a Lead/Contact.</description>
    <label>Marketability Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Implicit Opt-in</fullName>
            </value>
            <value>
                <fullName>Explicit Opt-in</fullName>
            </value>
            <value>
                <fullName>Double Opt-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>