force-app/main/default/objects/Lead/fields/Marketable__c.field-meta.xml
<CustomField>
    <fullName>Marketable__c</fullName>
    <description>Marketable field will be used to set the Lead as Marketable considering the Implicit, Explicit and Double Opt In flags.</description>
    <label>Marketable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>