force-app/main/default/objects/Lead/fields/Marketing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Notes__c</fullName>
    <description>Captures historical data from Question For Rep</description>
    <label>Marketing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>