force-app/main/default/objects/Lead/fields/Marketing_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pardot automation rule-if Prospect is member of either Employee List, Partner List, or Competitor List: Set Marketing Suppression = True.if Marketing_Suppression__c = True…do NOT apply the Status logic to the record</description>
    <label>Marketing Suppression</label>
    <type>Checkbox</type>
</CustomField>