force-app/main/default/objects/Lead/fields/Media_Code__c.field-meta.xml
<CustomField>
    <fullName>Media_Code__c</fullName>
    <description>Value from Hive9 Media Code passed through URL and into Pardot form to track campaign promotions.</description>
    <label>Media Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>