force-app/main/default/objects/Lead/fields/Most_Recent_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activity_Date__c</fullName>
    <description>[DCP-49756] - Field used to track the most recent activity date on the lead.</description>
    <label>Most Recent Activity Date</label>
    <type>DateTime</type>
</CustomField>