force-app/main/default/objects/Lead/fields/Number_Of_Times_MQ_Or_AQ__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Times_MQ_Or_AQ__c</fullName>
    <description>Value Source: Below workflow rules to update count for the no. of times the Lead Status is changed to either Automation Qualified or Marketing Qualified.

1. Lead Update Count on # of Time Hit MQ/AQ for MQ or AQ Lead Status
2. Lead Update count on # of Time Hit MQ/AQ for MQ or AQ Lead Status Subsequent Change</description>
    <label>Number Of Times MQ Or AQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>