force-app/main/default/objects/Lead/fields/Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Status__c</fullName>
    <description>IF Opt out = TRUE, then optin status = Unsubscribed
ELSE IF Marketable = TRUE, then optin status = Subscribed
ELSE Optin status = No Consent</description>
    <formula>if( HasOptedOutOfEmail,&apos;Unsubscribed&apos;, 
	if(ISPICKVAL(Marketable__c,&apos;Yes&apos;),&apos;Subscribed&apos;,&apos;No Consent&apos;	)

)</formula>
    <label>Opt In Status</label>
    <type>Text</type>
</CustomField>