force-app/main/default/objects/Lead/fields/Pardot_Einstein_Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Einstein_Email_Frequency__c</fullName>
    <description>Account Engagement&apos;s categorization of a prospect&apos;s current email engagement frequency. This field derives its value from Pardot automation rules to translate from the actual EEF field in Account Engagement to lead/contact records in SFDC.</description>
    <inlineHelpText>Account Engagement&apos;s categorization of a prospect&apos;s current email engagement frequency. This field derives its value from Pardot automation rules to translate from the actual EEF field in Account Engagement to lead/contact records in SFDC.</inlineHelpText>
    <label>Pardot Einstein Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Target</fullName>
            </value>
            <value>
                <fullName>Saturated</fullName>
            </value>
            <value>
                <fullName>Undersaturated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>