force-app/main/default/objects/Lead/fields/Pardot_Score_Counter__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Score_Counter__c</fullName>
    <description>DCP-38265 A prospect&apos;s score can be out of sync with Salesforce if an event that changes score occurs during a specific window of time where the prospect is already engaged in the sync process.</description>
    <label>Pardot Score Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>