force-app/main/default/objects/Lead/fields/PGUID__c.field-meta.xml
<CustomField>
    <fullName>PGUID__c</fullName>
    <description>Field that captures Platform users unique identifier</description>
    <externalId>true</externalId>
    <label>PGUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>