force-app/main/default/objects/Lead/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Field that captures preferred language of lead</description>
    <inlineHelpText>Lead&apos;s preferred language for all Illumina communications</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_And_Contact_Preferred_Language</valueSetName>
    </valueSet>
</CustomField>