force-app/main/default/objects/Lead/fields/Public_Health__c.field-meta.xml
<CustomField>
    <fullName>Public_Health__c</fullName>
    <description>Legacy field</description>
    <defaultValue>false</defaultValue>
    <label>Public Health</label>
    <type>Checkbox</type>
</CustomField>