force-app/main/default/objects/Lead/fields/Questions_For_Rep__c.field-meta.xml
<CustomField>
    <fullName>Questions_For_Rep__c</fullName>
    <description>Value source: Most Recent Questions for Sales Rep.</description>
    <label>Questions For Rep</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>