force-app/main/default/objects/Lead/fields/Recent_Prospecting_Tool__c.field-meta.xml
<CustomField>
    <fullName>Recent_Prospecting_Tool__c</fullName>
    <businessOwnerUser>jcolburn@illumina.com</businessOwnerUser>
    <description>Prospecting Tool used to recently identify and qualify the lead</description>
    <inlineHelpText>Prospecting Tool used to recently identify and qualify the lead</inlineHelpText>
    <label>Recent Prospecting Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prospecting_Tools</valueSetName>
    </valueSet>
</CustomField>