force-app/main/default/objects/Lead/fields/SendDoubleOptinConfirmation__c.field-meta.xml
<CustomField>
    <fullName>SendDoubleOptinConfirmation__c</fullName>
    <description>Field that captures when double opt in confirmation email has been sent</description>
    <defaultValue>false</defaultValue>
    <label>SendDoubleOptinConfirmation</label>
    <type>Checkbox</type>
</CustomField>