force-app/main/default/objects/Lead/fields/TradeShow_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>TradeShow_Attended_Date__c</fullName>
    <description>To capture the date of the trade show attended</description>
    <label>TradeShow Attended Date</label>
    <type>DateTime</type>
</CustomField>