force-app/main/default/objects/Lead/fields/ULC_Campaign_Id_1__c.field-meta.xml
<CustomField>
    <fullName>ULC_Campaign_Id_1__c</fullName>
    <description>Field populated by ULC-Pardot</description>
    <label>ULC Campaign Id #1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>