force-app/main/default/objects/Lead/fields/Waterfall_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Closed_Won_Date__c</fullName>
    <description>Field that captures waterfall stage closed won date for Hive9</description>
    <label>Waterfall Closed Won Date</label>
    <type>DateTime</type>
</CustomField>