force-app/main/default/objects/Lead/fields/Waterfall_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Opportunity_Date__c</fullName>
    <description>Field that captures waterfall stage when contact is associated to opportunity date for Hive9</description>
    <label>Waterfall Opportunity Date</label>
    <type>DateTime</type>
</CustomField>