force-app/main/default/objects/Lead/fields/Waterfall_Sales_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Sales_Accepted_Date__c</fullName>
    <description>Field that captures waterfall stage sales accepted date for Hive9</description>
    <label>Waterfall Sales Accepted Date</label>
    <type>DateTime</type>
</CustomField>