force-app/main/default/objects/Lead/fields/Waterfall_Stage__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Stage__c</fullName>
    <description>Field that captures waterfall stage for Hive9</description>
    <label>Waterfall Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Waterfall_Stage</valueSetName>
    </valueSet>
</CustomField>