force-app/main/default/objects/Lead/fields/Webinar_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value Source: Field Value checked By User.
DCP-13654- Updated to Picklist</description>
    <inlineHelpText>If yes, customer would like to be notified about upcoming webinars.</inlineHelpText>
    <label>Webinar Opt In</label>
    <type>Checkbox</type>
</CustomField>