force-app/main/default/objects/Lead/fields/Will_Not_Accept_English__c.field-meta.xml
<CustomField>
    <fullName>Will_Not_Accept_English__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value Source: Checkbox checked when the user does not accept English.
DCP-13654- Updated to Picklist
DCP-14346 -updated to Checkbox</description>
    <label>Will Not Accept English</label>
    <type>Checkbox</type>
</CustomField>