force-app/main/default/objects/Lead/validationRules/CharketFieldValidateDuringConversion.validationRule-meta.xml
<ValidationRule>
    <fullName>CharketFieldValidateDuringConversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsConverted,
OR( FirstName = &apos;N/A&apos;, LastName ==&apos;N/A&apos;,Company==&apos;N/A&apos;),
!$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
NOT($Permission.Lead_Bypass_Validation_Rules),
NOT( $Profile.Name==&apos;WeChat Charket Profile&apos; )

)</errorConditionFormula>
    <errorMessage>First Name, Last Name, or Company Name cannot be N/A upon conversion</errorMessage>
</ValidationRule>