force-app/main/default/objects/Lead/validationRules/Check_for_Email_Opt_Out_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Email_Opt_Out_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
	NOT(OR($Profile.Name=&apos;System Administrator&apos;,$Profile.Name=$Label.Integration_Marketing_Profile)), 
	NOT(ISNEW()),
	ISCHANGED(HasOptedOutOfEmail),
	HasOptedOutOfEmail=false,
	!$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c
	)</errorConditionFormula>
    <errorMessage>You do not have permission to reset Email Opt Out Field. Please contact your administrator</errorMessage>
</ValidationRule>